# samsara-fleet-manager

./: .env.example  .gitignore  APIExample_create_a_driver - Request.txt  APIExample_create_a_driver - Response.txt  Dockerfile  Headcount Report.xlsx  README.MD  README.md  SECURITY.md  codex.md  codex.yaml  config.py  docker-compose.yml  driver_manager.py  email_reporter.py  headcount_loader.py  locations.csv  main.py  mappings_manager.py  my_new_drivers.csv  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_driver_update.bat.txt  samsara_api.py  samsara_apis.py  username_utils.py  usernames.csv  validate_mappings_script.py
.github/workflows/: ci.yml
input/: NEW_HIRES_example.xlsx  new_hires_example.csv
mappings/: never_positions.csv  positions.csv
tests/: test_driver_manager.py  test_headcount_loader.py  test_samsara_api_retries.py
